--- a/app/src/main/res/layout/fragment_main2.xml
+++ b/app/src/main/res/layout/fragment_main2.xml
@@ -4,8 +4,79 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/main2_text"
+        android:id="@+id/wtextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="40dp"/>
+        android:layout_gravity="center"
+        android:textSize="25sp"
+        android:layout_marginTop="40dp"
+        android:text="What's the weather today?"/>
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:textSize="25sp"
+        android:id="@+id/weatherSpinner"
+        android:entries="@array/weatherArray"
+        android:layout_below="@id/wtextView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"></Spinner>
+    <TextView
+        android:id="@+id/mtextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:textSize="25sp"
+        android:text="What's your mood?"
+        android:layout_below="@id/weatherSpinner"/>
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:textSize="25sp"
+        android:id="@+id/moodSpinner"
+        android:entries="@array/moodArray"
+        android:layout_below="@id/mtextView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"></Spinner>
+    <TextView
+        android:id="@+id/btextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:textSize="25sp"
+        android:text="Budget?"
+        android:layout_below="@id/moodSpinner"/>
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="25sp"
+        android:id="@+id/budgetSpinner"
+        android:entries="@array/budgetArray"
+        android:layout_below="@id/btextView"
+        android:layout_gravity="center"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"></Spinner>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="25sp"
+        android:id="@+id/addNewRestaurant"
+        android:layout_below="@id/budgetSpinner"
+        android:layout_gravity="center"
+        android:text="What's its name?"/>
+    <EditText
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/addNewRestaurant"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Add restaurant!"
+        android:id="@+id/addButton"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="44dp"/>
 </LinearLayout>
