clean relative layout things

--- a/app/src/main/res/layout/fragment_main2.xml
+++ b/app/src/main/res/layout/fragment_main2.xml
@@ -17,10 +17,7 @@
         android:layout_gravity="center"
         android:textSize="25sp"
         android:id="@+id/weatherSpinner"
-        android:entries="@array/weatherArray"
-        android:layout_below="@id/wtextView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"></Spinner>
+        android:entries="@array/weatherArray"/>
     <TextView
         android:id="@+id/mtextView"
         android:layout_width="wrap_content"
@@ -35,48 +32,37 @@
         android:layout_gravity="center"
         android:textSize="25sp"
         android:id="@+id/moodSpinner"
-        android:entries="@array/moodArray"
-        android:layout_below="@id/mtextView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"></Spinner>
+        android:entries="@array/moodArray"/>
     <TextView
         android:id="@+id/btextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:textSize="25sp"
-        android:text="Budget?"
-        android:layout_below="@id/moodSpinner"/>
+        android:text="Budget?"/>
     <Spinner
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="25sp"
         android:id="@+id/budgetSpinner"
         android:entries="@array/budgetArray"
-        android:layout_below="@id/btextView"
-        android:layout_gravity="center"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"></Spinner>
+        android:layout_gravity="center"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="25sp"
         android:id="@+id/addNewRestaurant"
-        android:layout_below="@id/budgetSpinner"
         android:layout_gravity="center"
         android:text="What's its name?"/>
     <EditText
         android:layout_gravity="center"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/addNewRestaurant"/>
+        android:layout_height="wrap_content"/>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="Add restaurant!"
         android:id="@+id/addButton"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
         android:layout_marginBottom="44dp"/>
 </LinearLayout>
