--- a/app/src/main/res/layout/fragment_main2.xml
+++ b/app/src/main/res/layout/fragment_main2.xml
@@ -24,8 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:textSize="25sp"
-        android:text="What's your mood?"
-        android:layout_below="@id/weatherSpinner"/>
+        android:text="What's your mood?"/>
     <Spinner
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
