--- a/app/src/main/res/layout/fragment_main1.xml
+++ b/app/src/main/res/layout/fragment_main1.xml
@@ -20,7 +20,7 @@
         android:entries="@array/weatherArray"
         android:layout_below="@id/wtextView"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"></Spinner>
+        android:layout_alignParentStart="true"/>
     <TextView
         android:id="@+id/mtextView"
         android:layout_width="wrap_content"
@@ -38,7 +38,7 @@
         android:entries="@array/moodArray"
         android:layout_below="@id/mtextView"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"></Spinner>
+        android:layout_alignParentStart="true"/>
     <TextView
         android:id="@+id/btextView"
         android:layout_width="wrap_content"
@@ -56,13 +56,14 @@
         android:entries="@array/budgetArray"
         android:layout_below="@id/btextView"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"></Spinner>
+        android:layout_alignParentStart="true"/>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="Decide!"
         android:id="@+id/decideButton"
+        android:onClick="decide"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="44dp"/>
