--- a/app/src/main/res/layout/fragment_main1.xml
+++ b/app/src/main/res/layout/fragment_main1.xml
@@ -67,8 +67,7 @@
                 android:textSize="24sp"
                 android:text="Budget Condition"/>
         </LinearLayout>
-         <LinearLayout
-             android:layout_width=
+
             <Spinner
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -76,20 +75,41 @@
                 android:id="@+id/budgetSpinner"
                 android:entries="@array/budgetArray"/>
     </LinearLayout>
-    <TextView
-        android:id="@+id/mtextView"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="25sp"
-        android:text="What's your mood?"/>
-    <Spinner
-        android:background="@drawable/gray"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="25sp"
-        android:id="@+id/moodSpinner"
-        android:entries="@array/moodArray"/>
-
+        android:orientation="vertical"
+        android:background="#FFF"
+        android:layout_marginTop="6dp"
+        android:layout_marginLeft="6dp"
+        android:layout_marginRight="6dp"
+        android:paddingTop="10dp"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp">
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/icon_lunch"
+                android:contentDescription="Lunch Icon"/>
+            <TextView
+                android:id="@+id/mtextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="25sp"
+                android:text="What's your mood?"/>
+        </LinearLayout>
+        <Spinner
+            android:background="@drawable/gray"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="25sp"
+            android:id="@+id/moodSpinner"
+            android:entries="@array/moodArray"/>
+        </LinearLayout>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
