add string values

--- a/app/src/main/res/layout/fragment_main1.xml
+++ b/app/src/main/res/layout/fragment_main1.xml
@@ -24,11 +24,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/icon_lunch"
-                android:contentDescription="Lunch Icon"/>
+                android:contentDescription="@string/lunchIcon"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Weather Condition"
+                android:text="@string/askWeather"
                 android:textColor="#000"
                 android:textSize="24sp" />
         </LinearLayout>
@@ -58,14 +58,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/icon_lunch"
-                android:contentDescription="Lunch Icon"/>
+                android:contentDescription="@string/lunchIcon"/>
             <TextView
                 android:id="@+id/btextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#000"
                 android:textSize="24sp"
-                android:text="Budget Condition"/>
+                android:text="@string/askBudget"/>
         </LinearLayout>
 
             <Spinner
@@ -94,13 +94,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/icon_lunch"
-                android:contentDescription="Lunch Icon"/>
+                android:contentDescription="@string/lunchIcon"/>
             <TextView
                 android:id="@+id/dtextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="25sp"
-                android:text="Free drinks?"/>
+                android:text="@string/askDrink"/>
         </LinearLayout>
         <Spinner
             android:background="@drawable/gray"
@@ -113,7 +113,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Decide!"
+        android:text="@string/decide"
         android:id="@+id/decideButton"
         android:onClick="decide"
         android:layout_marginBottom="44dp"/>
