set edittext inputtype and hint

--- a/app/src/main/res/layout/fragment_main2.xml
+++ b/app/src/main/res/layout/fragment_main2.xml
@@ -49,6 +49,8 @@
         android:text="@string/askRest"/>
     <EditText
         android:id="@+id/newRest"
+        android:inputType="text"
+        android:hint="@string/restaurantName"
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
