--- a/app/src/main/res/layout/fragment_main1.xml
+++ b/app/src/main/res/layout/fragment_main1.xml
@@ -102,14 +102,22 @@
                 android:textSize="25sp"
                 android:text="@string/askDrink"/>
         </LinearLayout>
-        <Spinner
-            android:background="@drawable/gray"
-            android:layout_width="wrap_content"
+        <RadioGroup
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:textSize="25sp"
-            android:id="@+id/drinkSpinner"
-            android:entries="@array/drinkArray"/>
-        </LinearLayout>
+            android:orientation="horizontal">
+            <RadioButton
+                android:text="Yes"
+                android:textSize="25sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <RadioButton
+                android:text="No"
+                android:textSize="25sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </RadioGroup>
+    </LinearLayout>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
