--- a/app/src/main/res/layout/activity_display_result.xml
+++ b/app/src/main/res/layout/activity_display_result.xml
@@ -21,4 +21,13 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/result2"
         android:id="@+id/result3" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/searchResultOnMap"
+        android:id="@+id/searchResultMapButton"
+        android:onClick="searchResultMap"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="53dp" />
 </RelativeLayout>
