--- a/app/src/main/res/layout/activity_display_result.xml
+++ b/app/src/main/res/layout/activity_display_result.xml
@@ -1,33 +1,83 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     tools:context="com.dsl14.lunchdecider.DisplayResultActivity">
-
-    <TextView
-        android:layout_width="wrap_content"
+    <!-- Start of result 1 -->
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/result1"
-        android:layout_marginTop="40dp" />
-    <TextView
-        android:layout_width="wrap_content"
+        android:orientation="vertical"
+        android:background="#FFF"
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:paddingTop="12dp"
+        android:paddingBottom="12dp"
+        android:paddingLeft="18dp"
+        android:paddingRight="18dp">
+        <TextView
+            android:id="@+id/result1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Result 1"
+            android:textSize="25sp" />
+    </LinearLayout>
+    <!-- End of result 1 -->
+    <!-- Start of result 2 -->
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/result1"
-        android:id="@+id/result2" />
-    <TextView
-        android:layout_width="wrap_content"
+        android:orientation="vertical"
+        android:background="#FFF"
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:paddingTop="12dp"
+        android:paddingBottom="12dp"
+        android:paddingLeft="18dp"
+        android:paddingRight="18dp">
+        <TextView
+            android:id="@+id/result2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Result 2"
+            android:textSize="25sp" />
+    </LinearLayout>
+    <!-- End of result 2 -->
+    <!-- Start of result 3 -->
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/result2"
-        android:id="@+id/result3" />
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/searchResultOnMap"
+        android:orientation="vertical"
+        android:background="#FFF"
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:paddingTop="12dp"
+        android:paddingBottom="12dp"
+        android:paddingLeft="18dp"
+        android:paddingRight="18dp">
+        <TextView
+            android:id="@+id/result3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Result 3"
+            android:textSize="25sp" />
+    </LinearLayout>
+    <!-- End of result 3 -->
+    <com.beardedhen.androidbootstrap.BootstrapButton
         android:id="@+id/searchResultMapButton"
-        android:onClick="searchResultMap"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="53dp" />
-</RelativeLayout>
+        android:text="@string/searchResultOnMap"
+        android:textSize="18sp"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        bootstrap:bb_type="primary"
+        bootstrap:bb_roundedCorners="true"
+        android:onClick="searchResultMap" />
+</LinearLayout>
