--- a/app/src/main/res/layout/fragment_main2.xml
+++ b/app/src/main/res/layout/fragment_main2.xml
@@ -145,10 +145,11 @@
         </LinearLayout>
         <EditText
             android:id="@+id/newRest"
+            android:background="#00000000"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="15dp"
             android:inputType="text"
             android:hint="@string/restaurantName" />
     </LinearLayout>
