--- a/app/src/main/res/layout/fragment_main1.xml
+++ b/app/src/main/res/layout/fragment_main1.xml
@@ -118,7 +118,7 @@
                 android:layout_height="wrap_content"
                 android:onClick="buttonClick" />
             <RadioButton
-                android:text="No"
+                android:text="Any"
                 android:id="@+id/noButton"
                 android:textSize="14sp"
                 android:layout_width="wrap_content"
