--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -4,4 +4,5 @@
     <drawable name="white">#FFFFFF</drawable>
     <drawable name="black">#000000</drawable>
     <drawable name="blue">#0000FF</drawable>
+    <drawable name="underline">#CCCCCC</drawable>
 </resources>
